--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "A WhatsApp bot using Baileys",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.0.0",
-    "btch-downloader": "^1.0.0",
-    "chalk": "^4.1.2",
-    "express": "^4.17.1",
-    "figlet": "^1.5.0"
+    "@whiskeysockets/baileys": "^7.0.0",
+    "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
